edited index.html file

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="mouse_container">
-            <img src="../images/Rectangle 1.png" alt="mouse-img" srcset="" class="mouse-img">
+            <img src="./images/Rectangle 1.png" alt="mouse-img" srcset="" class="mouse-img">
             <p class="mouse_text">Листайте дальше</p>
         </div>
     </section>    
@@ -79,7 +79,7 @@
 
                 <div class="preferences_item">
                     <div class="prefernces_head">
-                        <img src="../images/nerd_face.png" alt="" class="smile_img">
+                        <img src="./images/nerd_face.png" alt="" class="smile_img">
                         <span> Лёгко и просто</span>
                     </div>
 
@@ -92,7 +92,7 @@
 
                 <div class="preferences_item">
                     <div class="prefernces_head">
-                        <img src="../images/winking_face.png" alt="" class="smile_img">
+                        <img src="./images/winking_face.png" alt="" class="smile_img">
                         <span> Быстро и доступно</span>
                     </div>
 
@@ -105,7 +105,7 @@
 
                 <div class="preferences_item">
                     <div class="prefernces_head">
-                        <img src="../images/proud_face.png" alt="" class="smile_img">
+                        <img src="./images/proud_face.png" alt="" class="smile_img">
                         <span> А главное, качественно</span>
                     </div>
 
