--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
             <div><img src="./images/clients/piar-consulting.png" alt="piar-agency-logo" class="autoplay-img"> </div>
             <div><img src="./images/clients/financial-times-logo.png" alt="financial-times-logo" class="autoplay-img"> </div>
             <div><img src="./images/clients/Universal-logopng.png" alt="universal-logo" class="autoplay-img"> </div>
+            <div><img src="./images/clients/Conde_Nast_logo.png" alt="universal-logo" class="autoplay-img"> </div>
   
         </div> 
     </div>
