--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
         <h2 id="reviews">Отзывы</h2>
     </div>
 
+    <div class="review_wrap">  
     <div class="review rev1">
         <div class="review_header">
             <div class="header_avatar">
@@ -362,6 +363,7 @@
       <img src="./images/Star 1.png" alt="" class="star">
     </div>      
  </div>
+</div>
 
  <div class="kitten_btn">
     <a href="#"> <span>Структурировать котиков</span></a>
